--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Webovio</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <a class="logo">
+                <img src="#" alt="Webovio Logo">
+            </a>
+            <button class="burger">
+                <span class="burger--line"></span>
+                <span class="burger--line"></span>
+                <span class="burger--line"></span>
+            </button>
+        </div>
+    </header>
 </body>
 </html>
