--- a/index.html
+++ b/index.html
@@ -12,12 +12,28 @@
             <a class="logo">
                 <img src="#" alt="Webovio Logo">
             </a>
-            <button class="burger">
+            <button class="burger" aria-label="Open menu">
                 <span class="burger--line"></span>
                 <span class="burger--line"></span>
                 <span class="burger--line"></span>
             </button>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero__content">
+                    <span class="hero__subtitle">A place where</span>
+                    <h1 class="hero__title">
+                        A&nbsp;creative agency for redemptive brands
+                    </h1>
+                    <p class="hero__descr">
+                        Anteelo is&nbsp;a&nbsp;leading strategic design firm that builds powerful digital solutions for startups and enterprises.
+                    </p>
+                    <a href="#">Get in touch</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
