--- a/index.html
+++ b/index.html
@@ -30,8 +30,54 @@
                     <p class="hero__descr">
                         Anteelo is&nbsp;a&nbsp;leading strategic design firm that builds powerful digital solutions for startups and enterprises.
                     </p>
-                    <a href="#">Get in touch</a>
+                    <a href="#" class="hero__link link">Get in touch</a>
                 </div>
+            </div>
+        </section>
+        <section class="services">
+            <div class="container">
+                <h2 class="services__title">
+                    Deation &amp;&nbsp;Evaluation&nbsp;&mdash; Best Way to&nbsp;Kick off Your Product Idea
+                </h2>
+                <ul class="services__list">
+                    <li class="services__item">
+                        <h3 class="services__subtitle">
+                            Product Design Sprint
+                        </h3>
+                        <p class="services__descr">
+                            A&nbsp;five-day workshop that will help you answer crucial business questions
+                        </p>
+                        <a href="#" class="services__link link">Read More</a>
+                    </li>
+                    <li class="services__item">
+                        <h3 class="services__subtitle">
+                            Scoping Session
+                        </h3>
+                        <p class="services__descr">
+                            A&nbsp;workshop aimed at&nbsp;shaping your business idea, answering questions regarding project planning
+                        </p>
+                        <a href="#" class="services__link link">Read More</a>
+                    </li>
+                    <li class="services__item">
+                        <h3 class="services__subtitle">
+                            UX Review
+                        </h3>
+                        <p class="services__descr">
+                            An&nbsp;evaluation which will help you radically improve your product.
+                        </p>
+                        <a href="#" class="services__link link">Read More</a>
+                    </li>
+                    <li class="services__item">
+                        <h3 class="services__subtitle">
+                            Code Review
+                        </h3>
+                        <p class="services__descr">
+                            Do&nbsp;you know what one of&nbsp;the key secrets of&nbsp;success 
+                            is&nbsp;what makes people successful in&nbsp;business
+                        </p>
+                        <a href="#" class="services__link link">Read More</a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
