--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                 </ul>
             </div>
         </section>
+        <section class="get-started">
+            <div class="container">
+                <h2 class="get-started__title">
+                    Let&rsquo;s make something amazing together.
+                </h2>
+                <a href="#" class="get-started__link link">Let&rsquo;s get started</a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
