--- a/index.html
+++ b/index.html
@@ -89,5 +89,68 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__top">
+                <div class="footer__contacts-item">
+                    <div class="footer__contacts-text">Phone</div>
+                    <a href="tel:+3250312832" class="footer__contacts-value">+32 50 31 28 32</a>
+                </div>
+                <div class="footer__contacts-item">
+                    <div class="footer__contacts-text">Address</div>
+                    <address class="footer__contacts-value">491 Merlin Crest Suite 963</address>
+                </div>
+            </div>
+            <div class="footer__middle">
+                <div class="footer__column">
+                    <h3 class="footer__title">Services</h3>
+                    <ul class="footer__list">
+                        <div class="footer__item"><a href="#" class="footer__link">Strategy Design</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Product Design</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Content Strategy</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Brand Strategy</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Development</a></div>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h3 class="footer__title">Help And Advice</h3>
+                    <ul class="footer__list">
+                        <div class="footer__item"><a href="#" class="footer__link">How it works</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Contact Support</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">FAQ</a></div>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h3 class="footer__title">Company</h3>
+                    <ul class="footer__list">
+                        <div class="footer__item"><a href="#" class="footer__link">About</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Blog</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Contact</a></div>
+                        <div class="footer__item"><a href="#" class="footer__link">Jobs</a></div>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h3 class="footer__title">Get in Touch</h3>
+                    <p class="footer__text">
+                        Feel free to&nbsp;get in&nbsp;touch with&nbsp;us vai email
+                    </p>
+                    <a href="mailto:info.webovio@gmail.com" class="footer__mail">info.webovio@gmail.com</a>
+                    <ul class="social">
+                        <li class="social__item"><a href="#" class="social__link social__link--fb" target="_blank" aria-label="Link to Facebook"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link--tw" target="_blank" aria-label="Link to Twitter"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link--g" target="_blank" aria-label="Link to Google+"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link--in" target="_blank" aria-label="Link to LinkeIn"></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <a class="logo">
+                    <img src="#" alt="Webovio Logo">
+                </a>
+                <small class="copyright">&copy;&nbsp;2020@webovio. All Rights Reserved.</small>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
