--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="logo">
                 <img src="#" alt="Webovio Logo">
             </a>
-            <button class="burger" aria-label="Open menu">
+            <button class="burger btn-reset" aria-label="Open menu">
                 <span class="burger--line"></span>
                 <span class="burger--line"></span>
                 <span class="burger--line"></span>
@@ -41,7 +41,7 @@
                 <h2 class="services__title">
                     Deation &amp;&nbsp;Evaluation&nbsp;&mdash; Best Way to&nbsp;Kick off Your Product Idea
                 </h2>
-                <ul class="services__list">
+                <ul class="services__list list-reset">
                     <li class="services__item">
                         <h3 class="services__subtitle">
                             Product Design Sprint
@@ -106,7 +106,7 @@
             <div class="footer__middle">
                 <div class="footer__column">
                     <h3 class="footer__title">Services</h3>
-                    <ul class="footer__list">
+                    <ul class="footer__list list-reset">
                         <div class="footer__item"><a href="#" class="footer__link">Strategy Design</a></div>
                         <div class="footer__item"><a href="#" class="footer__link">Product Design</a></div>
                         <div class="footer__item"><a href="#" class="footer__link">Content Strategy</a></div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="footer__column">
                     <h3 class="footer__title">Help And Advice</h3>
-                    <ul class="footer__list">
+                    <ul class="footer__list list-reset">
                         <div class="footer__item"><a href="#" class="footer__link">How it works</a></div>
                         <div class="footer__item"><a href="#" class="footer__link">Contact Support</a></div>
                         <div class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></div>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="footer__column">
                     <h3 class="footer__title">Company</h3>
-                    <ul class="footer__list">
+                    <ul class="footer__list list-reset">
                         <div class="footer__item"><a href="#" class="footer__link">About</a></div>
                         <div class="footer__item"><a href="#" class="footer__link">Blog</a></div>
                         <div class="footer__item"><a href="#" class="footer__link">Contact</a></div>
