--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header__container">
             <a class="logo">
-                <img src="#" alt="Webovio Logo">
+                <img src="img/logo.svg" alt="Webovio Logo">
             </a>
             <button class="burger btn-reset" aria-label="Open menu">
                 <span class="burger--line"></span>
