--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <img src="img/logo.svg" alt="Webovio Logo">
             </a>
             <button class="burger btn-reset" aria-label="Open menu">
-                <span class="burger--line"></span>
-                <span class="burger--line"></span>
-                <span class="burger--line"></span>
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
             </button>
         </div>
     </header>
@@ -25,7 +25,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero__content">
-                    <span class="hero__subtitle">A place where</span>
+                    <h2 class="hero__subtitle">A place where</h2>
                     <h1 class="hero__title">
                         A&nbsp;creative agency for redemptive brands
                     </h1>
@@ -42,42 +42,42 @@
                     Deation &amp;&nbsp;Evaluation&nbsp;&mdash; Best Way to&nbsp;Kick off Your Product Idea
                 </h2>
                 <ul class="services__list list-reset">
-                    <li class="services__item">
-                        <h3 class="services__subtitle">
+                    <li class="list__item">
+                        <h3 class="item__subtitle">
                             Product Design Sprint
                         </h3>
-                        <p class="services__descr">
+                        <p class="item__descr">
                             A&nbsp;five-day workshop that will help you answer crucial business questions
                         </p>
-                        <a href="#" class="services__link link">Read More</a>
+                        <a href="#" class="item__link link">Read More</a>
                     </li>
-                    <li class="services__item">
-                        <h3 class="services__subtitle">
+                    <li class="list__item">
+                        <h3 class="item__subtitle">
                             Scoping Session
                         </h3>
-                        <p class="services__descr">
+                        <p class="item__descr">
                             A&nbsp;workshop aimed at&nbsp;shaping your business idea, answering questions regarding project planning
                         </p>
-                        <a href="#" class="services__link link">Read More</a>
+                        <a href="#" class="item__link link">Read More</a>
                     </li>
-                    <li class="services__item">
-                        <h3 class="services__subtitle">
+                    <li class="list__item">
+                        <h3 class="item__subtitle">
                             UX Review
                         </h3>
-                        <p class="services__descr">
+                        <p class="item__descr">
                             An&nbsp;evaluation which will help you radically improve your product.
                         </p>
-                        <a href="#" class="services__link link">Read More</a>
+                        <a href="#" class="item__link link">Read More</a>
                     </li>
-                    <li class="services__item">
-                        <h3 class="services__subtitle">
+                    <li class="list__item">
+                        <h3 class="item__subtitle">
                             Code Review
                         </h3>
-                        <p class="services__descr">
+                        <p class="item__descr">
                             Do&nbsp;you know what one of&nbsp;the key secrets of&nbsp;success 
                             is&nbsp;what makes people successful in&nbsp;business
                         </p>
-                        <a href="#" class="services__link link">Read More</a>
+                        <a href="#" class="item__link link">Read More</a>
                     </li>
                 </ul>
             </div>
@@ -94,50 +94,50 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__top">
-                <div class="footer__contacts-item">
-                    <div class="footer__contacts-text">Phone</div>
-                    <a href="tel:+3250312832" class="footer__contacts-value">+32 50 31 28 32</a>
+                <div class="footer__contacts">
+                    <div class="contacts__text">Phone</div>
+                    <a href="tel:+3250312832" class="contacts__value">+32 50 31 28 32</a>
                 </div>
-                <div class="footer__contacts-item">
-                    <div class="footer__contacts-text">Address</div>
-                    <address class="footer__contacts-value">491 Merlin Crest Suite 963</address>
+                <div class="footer__contacts">
+                    <div class="contacts__text">Address</div>
+                    <address class="contacts__value">491 Merlin Crest Suite 963</address>
                 </div>
             </div>
             <div class="footer__middle">
                 <div class="footer__column">
-                    <h3 class="footer__title">Services</h3>
-                    <ul class="footer__list list-reset">
-                        <div class="footer__item"><a href="#" class="footer__link">Strategy Design</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Product Design</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Content Strategy</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Brand Strategy</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Development</a></div>
+                    <h3 class="column__title">Services</h3>
+                    <ul class="column__list list-reset">
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Strategy Design</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Product Design</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Content Strategy</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Brand Strategy</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Development</a></li>
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h3 class="footer__title">Help And Advice</h3>
-                    <ul class="footer__list list-reset">
-                        <div class="footer__item"><a href="#" class="footer__link">How it works</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Contact Support</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">FAQ</a></div>
+                    <h3 class="column__title">Help And Advice</h3>
+                    <ul class="column__list list-reset">
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">How it works</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Contact Support</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Privacy Policy</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h3 class="footer__title">Company</h3>
-                    <ul class="footer__list list-reset">
-                        <div class="footer__item"><a href="#" class="footer__link">About</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Blog</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Contact</a></div>
-                        <div class="footer__item"><a href="#" class="footer__link">Jobs</a></div>
+                    <h3 class="column__title">Company</h3>
+                    <ul class="column__list list-reset">
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">About</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Blog</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Contact</a></li>
+                        <li class="list__item--footer"><a href="#" class="item__link--footer">Jobs</a></li>
                     </ul>
                 </div>
                 <div class="footer__column">
-                    <h3 class="footer__title">Get in Touch</h3>
-                    <p class="footer__text">
+                    <h3 class="column__title">Get in Touch</h3>
+                    <p class="column__text">
                         Feel free to&nbsp;get in&nbsp;touch with&nbsp;us vai email
                     </p>
-                    <a href="mailto:info.webovio@gmail.com" class="footer__mail">info.webovio@gmail.com</a>
+                    <a href="mailto:info.webovio@gmail.com" class="column__mail">info.webovio@gmail.com</a>
                     <ul class="social">
                         <li class="social__item"><a href="#" class="social__link social__link--fb" target="_blank" aria-label="Link to Facebook"></a></li>
                         <li class="social__item"><a href="#" class="social__link social__link--tw" target="_blank" aria-label="Link to Twitter"></a></li>
