--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </p>
                     <a href="#" class="hero__link link">
                         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="12" height="12" x="0" y="0" viewBox="0 0 64 64" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m50.93 31.19-36.68-27a1.01056 1.01056 0 0 0 -1.59.81v54a1.01054 1.01054 0 0 0 1.59.81l36.68-27a1.01125 1.01125 0 0 0 0-1.62z" class=""></path></g></svg>
-                        Get in touch
+                        <span>Get in touch</span>
                     </a>
                 </div>
             </div>
@@ -52,7 +52,10 @@
                         <p class="item__descr">
                             A&nbsp;five-day workshop that will help you answer crucial business questions
                         </p>
-                        <a href="#" class="item__link link">Read More</a>
+                        <a href="#" class="item__link link">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="12" height="12" x="0" y="0" viewBox="0 0 64 64" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m50.93 31.19-36.68-27a1.01056 1.01056 0 0 0 -1.59.81v54a1.01054 1.01054 0 0 0 1.59.81l36.68-27a1.01125 1.01125 0 0 0 0-1.62z" class=""></path></g></svg>
+                            <span>Read More</span>
+                        </a>
                     </li>
                     <li class="list__item">
                         <h3 class="item__subtitle">
@@ -61,26 +64,35 @@
                         <p class="item__descr">
                             A&nbsp;workshop aimed at&nbsp;shaping your business idea, answering questions regarding project planning
                         </p>
-                        <a href="#" class="item__link link">Read More</a>
+                        <a href="#" class="item__link link">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="12" height="12" x="0" y="0" viewBox="0 0 64 64" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m50.93 31.19-36.68-27a1.01056 1.01056 0 0 0 -1.59.81v54a1.01054 1.01054 0 0 0 1.59.81l36.68-27a1.01125 1.01125 0 0 0 0-1.62z" class=""></path></g></svg>
+                            <span>Read More</span>
+                        </a>
                     </li>
                     <li class="list__item">
                         <h3 class="item__subtitle">
-                            UX Review
+                            UX <br> Review
                         </h3>
                         <p class="item__descr">
                             An&nbsp;evaluation which will help you radically improve your product.
                         </p>
-                        <a href="#" class="item__link link">Read More</a>
+                        <a href="#" class="item__link link">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="12" height="12" x="0" y="0" viewBox="0 0 64 64" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m50.93 31.19-36.68-27a1.01056 1.01056 0 0 0 -1.59.81v54a1.01054 1.01054 0 0 0 1.59.81l36.68-27a1.01125 1.01125 0 0 0 0-1.62z" class=""></path></g></svg>
+                            <span>Read More</span>
+                        </a>
                     </li>
                     <li class="list__item">
                         <h3 class="item__subtitle">
-                            Code Review
+                            Code <br> Review
                         </h3>
                         <p class="item__descr">
                             Do&nbsp;you know what one of&nbsp;the key secrets of&nbsp;success 
                             is&nbsp;what makes people successful in&nbsp;business
                         </p>
-                        <a href="#" class="item__link link">Read More</a>
+                        <a href="#" class="item__link link">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="12" height="12" x="0" y="0" viewBox="0 0 64 64" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m50.93 31.19-36.68-27a1.01056 1.01056 0 0 0 -1.59.81v54a1.01054 1.01054 0 0 0 1.59.81l36.68-27a1.01125 1.01125 0 0 0 0-1.62z" class=""></path></g></svg>
+                            <span>Read More</span>
+                        </a>
                     </li>
                 </ul>
             </div>
