get-started style

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                 <h2 class="get-started__title">
                     Let&rsquo;s make something amazing together.
                 </h2>
-                <a href="#" class="get-started__link link">Let&rsquo;s get started</a>
+                <a href="#" class="get-started__link link">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="12" height="12" x="0" y="0" viewBox="0 0 64 64" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m50.93 31.19-36.68-27a1.01056 1.01056 0 0 0 -1.59.81v54a1.01054 1.01054 0 0 0 1.59.81l36.68-27a1.01125 1.01125 0 0 0 0-1.62z" class=""></path></g></svg>
+                    <span>Let&rsquo;s get started</span>
+                </a>
             </div>
         </section>
     </main>
@@ -153,7 +156,7 @@
                         Feel free to&nbsp;get in&nbsp;touch with&nbsp;us vai email
                     </p>
                     <a href="mailto:info.webovio@gmail.com" class="column__mail">info.webovio@gmail.com</a>
-                    <ul class="social">
+                    <ul class="social list-reset">
                         <li class="social__item"><a href="#" class="social__link social__link--fb" target="_blank" aria-label="Link to Facebook"></a></li>
                         <li class="social__item"><a href="#" class="social__link social__link--tw" target="_blank" aria-label="Link to Twitter"></a></li>
                         <li class="social__item"><a href="#" class="social__link social__link--g" target="_blank" aria-label="Link to Google+"></a></li>
