footer__bottom style

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <div class="footer__bottom">
                 <a class="logo">
-                    <img src="#" alt="Webovio Logo">
+                    <img src="img/footer-logo.svg" alt="Webovio Logo">
                 </a>
                 <small class="copyright">&copy;&nbsp;2020@webovio. All Rights Reserved.</small>
             </div>
